# PWiR

./: .pre-commit-config.yaml  pyproject.toml
backend/kernel/: settings.py
ci/compose/: kernel.yaml
ci/dockerfiles/: backend-dev.Dockerfile  backend-dev.dockerignore
ci/requirements/: development-requirements.txt  production-requirements.txt  requirements.txt
proxy/: proxylist_download_api.py
proxy/proxies/: proxylist_download_api.py
proxy/proxies/proxies/: items.py  middlewares.py  pipelines.py  settings.py
proxy/proxies/proxies/spiders/: freeproxy_cz.py  freeproxylist_net.py  proxylist_download.py
proxy/proxies/utils/: country_dict.py  reverse_country_dict.py
proxy/proxy/: middlewares.py  settings.py
proxy/proxy/spiders/: freeproxy_cz.py  freeproxylist_net.py  proxylist_download.py
proxy/utils/: country_dict.py  reverse_country_dict.py
