[tool.poetry]
name = "pwir"
version = "0.1.0"
description = ""
authors = ["ptakf <s222693@student.uek.krakow.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
scrapy = "^2.11.0"


[tool.poetry.group.development.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
